--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hi_it_s_fruturity">Hi 👋,\nit’s Fruturity!</string>
     <string name="tap_to_start_detecting">Tap to start detecting!</string>
     <string name="which_delightful_fruit_graces_you_today">Which delightful fruit graces you today?</string>
+    <string name="placeholder_search">Search Fruit</string>
+    <string name="empty_msg">Nothing to Display</string>
 </resources>
