--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="which_delightful_fruit_graces_you_today">Which delightful fruit graces you today?</string>
     <string name="placeholder_search">Search Fruit</string>
     <string name="empty_msg">Nothing to Display</string>
+    <string name="back">Back</string>
+    <string name="ripeness">Very Ripe</string>
+
+    <!-- Detail -->
+
 </resources>
