correcting the navigation and implementing the my stuff screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="empty_msg">Nothing to Display</string>
     <string name="back">Back</string>
     <string name="ripeness">Very Ripe</string>
+    <string name="history">History</string>
+    <string name="mystuff">My Stuff</string>
 
     <!-- Detail -->
 
