create camera and custome button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="empty_msg">Nothing to Display</string>
     <string name="back">Back</string>
     <string name="ripeness">Very Ripe</string>
+    <string name="title_activity_camerax">CameraxActivity</string>
 
     <!-- Detail -->
 
