--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,12 @@
     <string name="history">History</string>
     <string name="mystuff">My Stuff</string>
 
+
+    <string name="title_activity_camerax">CameraxActivity</string>
+
+    <string name="title_activity_image_clasification">ImageClasificationActivity</string>
+    <string name="title_activity_result">ResultActivity</string>
+
     <!-- Detail -->
 
 </resources>
