--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="detected_on">"Detected On: "</string>
     <string name="edit">Edit</string>
     <string name="save">Save</string>
+    <string name="home">Home</string>
+    <string name="bookmark">Bookmark</string>
 
     <!-- Detail -->
 
