--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="Ripenes">"Ripeness: "</string>
     <string name="detected_on">"Detected On: "</string>
     <string name="edit">Edit</string>
-    <string name="save">Save</string>
+    <string name="delete">Delete</string>
     <string name="home">Home</string>
     <string name="bookmark">Bookmark</string>
 
